cmake_minimum_required(VERSION 3.27)
project(Annasul)

set(CMAKE_CXX_STANDARD 20)

if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
    add_definitions(-DPLATFORM_WINDOWS=1)
elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
    add_definitions(-DPLATFORM_LINUX=1)
elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
    add_definitions(-DPLATFORM_MACOS=1)
elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Android")
    add_definitions(-DPLATFORM_ANDROID=1)
else ()
    message(FATAL_ERROR "Unsupported platform")
endif ()
add_definitions(-DUNICODE -D_UNICODE)

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc /Zc:__cplusplus")
else ()
    message(FATAL_ERROR "Unsupported compiler")
endif ()

add_subdirectory(Annasul)

if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
    add_executable(Main WIN32 main.cpp)
elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
    add_executable(Main main.cpp)
elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
    add_executable(Main main.cpp)
elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Android")
    add_executable(Main main.cpp)
endif ()

target_link_libraries(Main AnnasulCore AnnasulRender AnnasulSocket AnnasulLaunch)
