cmake_minimum_required(VERSION 3.27)
project(Annasul)

set(CMAKE_CXX_STANDARD 20)

if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
    add_definitions(-DPLATFORM_WINDOWS=1)
elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
    add_definitions(-DPLATFORM_LINUX=1)
elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
    add_definitions(-DPLATFORM_MACOS=1)
elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Android")
    add_definitions(-DPLATFORM_ANDROID=1)
else ()
    message(FATAL_ERROR "Unsupported platform")
endif ()
add_definitions(-DUNICODE -D_UNICODE)

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc /Zc:__cplusplus")
else ()
    message(FATAL_ERROR "Unsupported compiler")
endif ()

if (ENABLE_FEATURE_EDITORS)
    add_definitions(-DENABLE_FEATURE_EDITORS=1)
endif ()
if (ENABLE_FEATURE_DEBUG)
    add_definitions(-DENABLE_FEATURE_DEBUG=1)
endif ()
if (ENABLE_FEATURE_RELEASE)
    add_definitions(-DENABLE_FEATURE_RELEASE=1)
endif ()

add_subdirectory(Annasul)

if (ENABLE_FEATURE_EDITORS)
    if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
        add_executable(MainEditor WIN32 main.cpp)
    elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
        add_executable(MainEditor main.cpp)
    elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
        add_executable(MainEditor main.cpp)
    elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Android")
        add_executable(MainEditor main.cpp)
    endif ()
    target_link_libraries(MainEditor AnnasulCore AnnasulRender AnnasulSocket AnnasulLaunch)
endif ()
if (ENABLE_FEATURE_DEBUG)
    if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
        add_executable(MainDebug WIN32 main.cpp)
    elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
        add_executable(MainDebug main.cpp)
    elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
        add_executable(MainDebug main.cpp)
    elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Android")
        add_executable(MainDebug main.cpp)
    endif ()
    target_link_libraries(MainDebug AnnasulCore AnnasulRender AnnasulSocket AnnasulLaunch)
endif ()
if (ENABLE_FEATURE_RELEASE)
    if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
        add_executable(MainRelease WIN32 main.cpp)
    elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
        add_executable(MainRelease main.cpp)
    elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
        add_executable(MainRelease main.cpp)
    elseif (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Android")
        add_executable(MainRelease main.cpp)
    endif ()
    target_link_libraries(MainRelease AnnasulCore AnnasulRender AnnasulSocket AnnasulLaunch)
endif ()

