

function(traverse_and_add_files dir)
    file(GLOB_RECURSE CPP_FILES "${dir}/*.cpp")
    file(GLOB_RECURSE HPP_FILES "${dir}/*.hpp" "${dir}/*.inl")
    #    foreach (CPP_FILE ${CPP_FILES})
    #        get_filename_component(CPP_FILE_NAME ${CPP_FILE} NAME_WE)
    #        message(STATUS "CPP_FILES: ${CPP_FILE}")
    #    endforeach ()
    #    foreach (HPP_FILE ${HPP_FILES})
    #        get_filename_component(HPP_FILE_NAME ${HPP_FILE} NAME_WE)
    #        message(STATUS "HPP_FILES: ${HPP_FILE}")
    #    endforeach ()
    set(sources ${sources} ${CPP_FILES} PARENT_SCOPE)
    set(headers ${headers} ${HPP_FILES} PARENT_SCOPE)
endfunction()

function(traverse_directories_and_add_files dir)
    message(STATUS "Subdirectory: ${dir}")
    file(GLOB SUBDIRS "${dir}/*")
    foreach (SUBDIR ${SUBDIRS})
        if (IS_DIRECTORY ${SUBDIR})
            get_filename_component(SUBDIR_NAME ${SUBDIR} NAME)
            if (SUBDIR_NAME STREQUAL "Windows")
                if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
                    traverse_and_add_files(${SUBDIR})
                    traverse_directories_and_add_files(${SUBDIR})
                endif ()
            elseif (SUBDIR_NAME STREQUAL "Linux")
                if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
                    traverse_and_add_files(${SUBDIR})
                    traverse_directories_and_add_files(${SUBDIR})
                endif ()
            elseif (SUBDIR_NAME STREQUAL "Mac")
                if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
                    traverse_and_add_files(${SUBDIR})
                    traverse_directories_and_add_files(${SUBDIR})
                endif ()
            elseif (SUBDIR_NAME STREQUAL "Android")
                if (CMAKE_SYSTEM_NAME STREQUAL "Android")
                    traverse_and_add_files(${SUBDIR})
                    traverse_directories_and_add_files(${SUBDIR})
                endif ()
            else ()
                traverse_and_add_files(${SUBDIR})
                traverse_directories_and_add_files(${SUBDIR})
            endif ()
        endif ()
    endforeach ()
endfunction()


function(add_annasul_module path depend_libs)
    set(sources "")
    set(headers "")

    get_filename_component(SUBDIR_NAME ${path} NAME)

    if (depend_libs)
        message(STATUS "Module: <${SUBDIR_NAME}> Depend: \"${depend_libs}\"")
    else ()
        message(STATUS "Module: <${SUBDIR_NAME}>")
    endif ()

    traverse_and_add_files(${path}/Private)
    traverse_directories_and_add_files(${path}/Private)
    traverse_and_add_files(${path}/Public)
    traverse_directories_and_add_files(${path}/Public)

    message(STATUS "Header: ${headers}")

    add_library(Annasul${SUBDIR_NAME} STATIC ${sources} ${headers})
    target_include_directories(Annasul${SUBDIR_NAME} PUBLIC ${path}/Public PRIVATE ${path}/Private)

    if (depend_libs)
        target_link_libraries(Annasul${SUBDIR_NAME} PUBLIC ${depend_libs})
    endif ()
endfunction()


add_annasul_module("./Source/Editor/Editor" "AnnasulLaunch;AnnasulRender")

add_annasul_module("./Source/Runtime/Core" "")
add_annasul_module("./Source/Runtime/Engine" "AnnasulCore")
add_annasul_module("./Source/Runtime/Launch" "AnnasulEngine")
add_annasul_module("./Source/Runtime/Math" "AnnasulCore")
add_annasul_module("./Source/Runtime/Window" "AnnasulCore;AnnasulMath;Imm32.lib;dwmapi.lib")
add_annasul_module("./Source/Runtime/Render" "AnnasulCore;AnnasulWindow;d2d1.lib")
add_annasul_module("./Source/Runtime/Socket" "AnnasulCore;ws2_32.lib")
