[package]
name = "annasul"
version = "0.1.0"
edition = "2024"
description = "An ui crate"
license-file = "../LICENSE"
repository = "https://github.com/yuanair/Annasul"
readme = "README.md"
keywords = ["annasul", "ui"]
exclude = ["rc"]

[features]
window = ["dep:winit", "dep:raw-window-handle"]
vulkan = ["dep:vulkano", "dep:vulkano-shaders"]
serde = ["dep:serde"]
log = ["dep:log"]

[dependencies]
annasul_build = { version = "0.1.0", path = "../annasul_build" }
log = { version = "0.4.26", optional = true }
serde = { version = "1.0.219", optional = true }
lazy_static = "1.5.0"
vulkano = { version = "0.35.1", optional = true }
vulkano-shaders = { version = "0.35.0", optional = true }
raw-window-handle = { version = "0.6.2", optional = true }
winit = { version = "0.30.9", optional = true }
