[package]
name = "annasul"
version = "0.1.0"
edition = "2024"
description = "An ui crate"
license-file = "../LICENSE"
repository = "https://github.com/yuanair/Annasul"
readme = "README.md"
keywords = ["annasul", "ui"]
exclude = ["rc"]

[features]
window = ["dep:winit", "dep:raw-window-handle"]
render = ["dep:raw-window-handle"]
render_wgpu = ["render", "dep:wgpu"]
serde = ["dep:serde"]
log = ["dep:log"]
application = ["dep:winit"]
wgpu = ["dep:wgpu"]

[dependencies]
annasul_build = { version = "0.1.0", path = "../annasul_build" }
log = { version = "0.4.26", optional = true }
serde = { version = "1.0.219", optional = true }
lazy_static = "1.5.0"
raw-window-handle = { version = "0.6.2", optional = true }
winit = { version = "0.30.9", optional = true }
wgpu = { version = "25.0.0", optional = true }
