[package]
name = "engine"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "engine"
crate-type = ["cdylib", "lib"]

[dependencies]
android_logger = "0.15.0"
annasul_engine = { version = "0.1.0", path = "../annasul_engine", features = [
    "editor",
] }
log = "0.4.27"
winit = { version = "0.30.10", features = ["android-native-activity"] }

[package.metadata.android]
build_targets = ["ArmV7a", "Arm64V8a"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35
