[package]
name = "example"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
wgpu = { version = "24.0.3", features = ["glsl"] }
annasul = { version = "0.1.0", path = "../annasul", features = [
    "render_wgpu",
    "application",
] }
toml = "0.8.20"
winit = { version = "0.30.9" }
log = { version = "*" }
env_logger = { version = "*" }
window-vibrancy = "0.5.2"
pollster = "0.4.0"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = "0.25.5"
rhai = "1.21.0"
[build-dependencies]
annasul_build = { version = "0.1.0", path = "../annasul_build" }
