[package]
name = "ice_bucket_query_tool"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "ice_bucket_query_tool"
crate-type = ["cdylib", "lib"]

[dependencies]
android_logger = "0.15.0"
log = "0.4.27"
winit = { version = "0.30.10", features = ["android-native-activity"] }
eframe = { version = "0.31.1", features = ["android-native-activity"] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = "0.25.6"


[package.metadata.android]
build_targets = ["ArmV7a", "Arm64V8a"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35
